2003-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawClipPath): Fix memory leak of
	clone_info->clip_path.  Problem reported by Vladimir
	<lvm@integrum.ru>.
	(DestroyDrawInfo): Remove unnecessary checks for non-null prior to
	invoking MagickFreeMemory. MagickFreeMemory already checks for
	non-null.
	* magick/log.h (GetCurrentFunction): Apparently Visual C++ 6.0
	does not support __FUNCTION__.  Problem reported by Vladimir
	<lvm@integrum.ru>.
	* wand/magick_compat.c: All functions in magick_compat.c must use
	WandExport rather than MagickExport. Fix recommended by Vladimir
	<lvm@integrum.ru>.
	* magick/constitute.c (PushImagePixels): number_pixels was always
	cast to a long during use, so change to store value in a long
	instead.
	(PopImagePixels): number_pixels was always
	cast to a long during use, so change to store value in a long
	instead.

2003-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c: Eliminated warning regarding unused initialized
	variable.
	* magick/log.c: Eliminate type warnings regarding enum assignment.
	* coders/locale.c (WriteLOCALEImage): Use UndefinedException
	rather than 0 in severity_list terminating entry in order to avoid
	a type conversion warning.
	* magick/image.c (SetImageChannelDepth): Depth parameter was being
	returned rather than status.  Oops!
	* magick/effect.c (BlurScanline): Due to automatic casting
	conventions, computation was being done (at least with SGI
	compiler) as type 'unsigned long' rather than 'long' as it should
	have been.
	* coders/jpeg.c, coders/meta.c, coders/miff.c, coders/msl.c,
	coders/palm.c, coders/pcd.c, coders/psd.c, coders/svg.c,
	coders/tiff.c, coders/xcf.c, magick/render.c, : Quench many SGI
	compiler warnings regarding variables which are initialized but
	never used.
	* magick/xwindow.h: Undef gravity defines so that enumerated type
	is used instead.

2003-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
